--- a/specification/network/resource-manager/Microsoft.Network/stable/2018-06-01/applicationGateway.json
+++ b/specification/network/resource-manager/Microsoft.Network/stable/2018-06-01/applicationGateway.json
@@ -1035,7 +1035,7 @@
         },
         "protocol": {
           "type": "string",
-          "description": "The protocol used to communicate with the backend. Possible values are 'Http' and 'Https'.",
+          "description": "The protocol used to communicate with the backend.",
           "enum": [
             "Http",
             "Https"
@@ -1142,7 +1142,7 @@
         },
         "protocol": {
           "type": "string",
-          "description": "Protocol of the HTTP listener. Possible values are 'Http' and 'Https'.",
+          "description": "Protocol of the HTTP listener.",
           "enum": [
             "Http",
             "Https"
@@ -1255,7 +1255,7 @@
       "properties": {
         "protocol": {
           "type": "string",
-          "description": "The protocol used for the probe. Possible values are 'Http' and 'Https'.",
+          "description": "The protocol used for the probe.",
           "enum": [
             "Http",
             "Https"
